--- a/index.html
+++ b/index.html
@@ -60,12 +60,22 @@
             <button type="submit" class="sbtbtn" id="submitButton"> Add Note</button>
         </form>
 
-        <div class="heading" id="heading">
-        <h1 >Your Notes</h1><hr>
-    </div>
+        <div class="heading" id="pinnedHeading">
+            <h1>Pinned Notes</h1>
+            <hr>
+        </div>
+        
+        <div class="showPinedNotes" id="showPinedNotes"></div>
+
+        <div class="heading" id="unPinnedHeading">
+            <h1>All Notes</h1>
+            <hr>
+        </div>
+
+        <div class="showNotes" id="showNotes"></div>
 
         <div class="showNotes" id="showNotes">
-            
+
         </div>
 
     </div>
