--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="fas fa-times"></span>
         </div>
         <form action="#">
-            <input type="search" class="search-data" placeholder="Search" required>
+            <input type="search" class="search-data" placeholder="Search" id="search" required>
             <button type="submit" class="fas fa-search"></button>
         </form>
     </nav>
